--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
     
     <!-- Android 8.0 接听电话 模拟耳机按键的时候需要通知栏权限 -->
     <uses-permission android:name="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE"/>
+    <!-- Android 8.0 接听电话 官方api需要的权限 -->
+    <uses-permission android:name="android.permission.ANSWER_PHONE_CALLS"/>
 
     <application
         android:allowBackup="true"
